osha.theme Changelog
====================

1.3.9 (unreleased)
------------------

- Nothing changed yet.


1.3.8 (2010-03-16)
------------------

- Hiding the breadcrumbs for the FOP section #611 (deroiste)
- Added OSH_Link-to-Provider (and vice versa) switcher, #619 (thomasw)


1.3.7 (2010-03-07)
------------------

- Changed Napo logofooter to point inrs.fr to french version instead of english (part of #826) (pilz)
- Practical Solution portlet: Include Language Neutral results when
  "en" is selected. #766 (deroiste)
- Practical solution search: ALWAYS include the neutral language! Neutral means
  it is relevant in all languages (thomasw) 

1.3.6 (2010-02-17)
------------------

- Floating the available-translations viewlet from osha.fop to put it in the
  right place. #611 (deroiste)
- Hiding the available-translations viewlet via css, displaying it only on the
  oshnetwork-member-view #611 (deroiste)
- Changing the available-translations portlet to use links instead of a selection
  list and updating the CSS for that #611 (deroiste)
- oshmacros.pt: don't throw error if item_pubdate is None (thomasw)
- Modified worklist #618: can select more than 1 Author; added field for
  "modification date"; display a link to an object's history in the result list
  if the item is versionable and the user is logged in; added better explanation
  for the "remote URL" (thomasw)
- Search form for practical_solution: don't show an empty select drop-down for
  subcategories without a second level (thomasw)
- Fix for funny buildout/setuptools issues: FCKEditor -> FCKeditor in
  setup.py (gerken)
- Tweaking the css for the additional languages selection, related to osha.fop
  #611 (deroiste)
- hide the field osha_metadata except on the specified sections (thomasw)
- Removing language neutral results from the practical solutions portlet, as
  requested in #766 (deroiste)
- Adding a link to the English language results in varoious searches
  #766 (deroiste)