@@ -724,4 +724,12 @@
       permission="zope2.View"
       />
 
+    <!-- Inline content viewlet -->
+    <browser:viewlet
+        name="osha.theme.inline_content_viewlet"
+        manager="plone.app.layout.viewlets.interfaces.IBelowContentTitle"
+        class=".viewlets.InlineContentViewlet"
+        permission="zope2.View"
+        />
+
 </configure>
