@@ -4,8 +4,9 @@ osha.theme Changelog
 1.3.9 (unreleased)
 ------------------
 
-- Nothing changed yet.
-
+- quick'n'dirty solution for #627: a new viewlet is registered that
+  displays the contents of a doc called inline_content_viewlet below the
+  title on objects with the marker i-face IInlineContentViewlet (thomasw)
 
 1.3.8 (2010-03-16)
 ------------------
